# guidebook_prj_test

./: .gitignore  README.md  Requirement.md  Requirement_future.md  main.py  pyproject.toml
data/: photo.json
data_editing/: auth.py  data_collecting.py  function.py
js/: next.config.ts  package-lock.json  package.json
js/public/data/: init.json  main.json  photo.json
js/src/: middleware.ts
js/src/app/: globals.css  page.tsx
js/src/components/: Map.tsx
js/src/types/: index.ts
